add the latest code

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,6 +21,21 @@
                 <%= button_to 'Sign In Seller', new_seller_session_path %>
             <% end %>
           </li>    
+
+          <li class="nav-item">
+            <%= link_to "Customer", customers_path, class: "navbar-brand" %>
+          </li>
+
+          <li class="nav-item">
+            <% if customer_signed_in? %>
+              <%= button_to "Signout Customer", destroy_customer_session_path,
+                method: :delete
+              %>
+              <% else %>
+                <%= button_to 'Sign In Customer', new_customer_session_path %>
+            <% end %>
+          </li>  
+
                  
           <!-- Add more navbar items as needed -->
         </ul>
